force-app/main/default/objects/FlexiChk__Checklist_Section_Template__c/FlexiChk__Checklist_Section_Template__c.object-meta.xml
<CustomObject>
    <label>Checklist Section Template</label>
    <nameField>
        <displayFormat>TSECT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Section Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>