force-app/main/default/objects/FlexiChk__Checklist_Section_Template__c/fields/FlexiChk__Description__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>