force-app/main/default/objects/FlexiChk__Checklist_Section_Template__c/fields/FlexiChk__Guide__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Guide__c</fullName>
    <label>Guide</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>