force-app/main/default/objects/FlexiChk__Checklist_Section_Template__c/fields/FlexiChk__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Help_Text__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>