force-app/main/default/objects/FlexiChk__Checklist_Section_Template__c/fields/FlexiChk__Section_Status_Change_Alert__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Section_Status_Change_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section Status Change Alert</label>
    <type>Checkbox</type>
</CustomField>